--- a/index.html
+++ b/index.html
@@ -214,9 +214,12 @@
                     </p>
                     <h4>Contributions</h4>
                     <p>
-                        This project was a 5-person team.
-                        I was the lead level designer. This consisted of level design, puzzle elements through the use of
-                        blue slime-coloring to push items, scene management, and player guidance.
+                        <ul>
+                            <li>Worked on a 5-person team to explore a larger, team-based game development project.</li>
+                            <li>Utilized an "Event Publish and Subscribe" pattern to keep a clean and independent systems within our code base.</li>
+                            <li>Appointed to level designer for the implementation of levels and puzzle elements involving pushing objects and teleporation.</li>
+                            <li>Handled player guidance through a Toast System to alleviate player frustrations.</li>
+                          </ul>
                     </p>
                     <h4>Toolkit</h4>
                     <p>
@@ -386,13 +389,12 @@
                     </p>
                     <h4>Contributions</h4>
                     <p>
-                        This project was a solo project. Other than the art and audio, I am the sole owner of all 
-                        the details seen in-game. 
-
-                        Some noteworthy methods utilized in the game's creation include level segmentation (for performance maintenance),
-                        ample resource placement, semi-random but accuracte obstacle spawning, and a singleton GameManager procedure.
-
-                        Special thanks to a close friend Dillon Hembree for the bird art.
+                        <ul>
+                            <li>Developed a solo project to find a novel game mechanic and utilize it in the creation of a closed game loop.</li>
+                            <li>Managed level segmentation in the interest of keeping perfomance high for long, side-scrolling levels.</li>
+                            <li>Designed an obstacle system with controlled randomness for novelty across different game runs.</li>
+                            <li>Followed a singleton game manager procedure to track progress across levels</li>
+                        </ul>
                     </p>
                     <h4>Toolkit</h4>
                     <p>
