--- a/index.html
+++ b/index.html
@@ -361,10 +361,12 @@
                     </p>
                     <h4>Contributions</h4>
                     <p>
-                        Like the shiny weapons? I handled all of their functionality and animations.
-                        The Legend of Zelda is full of rich sound effects and I implemented them in this rendition of the classic game.
-                        Condition based events like opening locked doors, puzzle doors, or enemy-locked doors were part of my duties.
-                        The nostalgic Old Man Room, the perspective-shifting 2D Bow Room, and everything inside of them (besides enemies) also fell into my hands.
+                        <ul>
+                            <li>Redeveloped the first dungeon for the original NES Legend of Zelda game to set a powerful foundation on the Unity
+                                game engine.</li>
+                            <li>Implemented the character's (Link's) weapons and inventory for practice on player controllers.</li>
+                            <li>Explored Unity's toolkit for dungeon creation to gain knowledge on tile palettes, coroutines, and scene management.</li>
+                        </ul>
                     </p>
                     <h4>Toolkit</h4>
                     <p>
