--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Game Developer & Game Designer</h3>
-                    <p>Hey there! I am Pedro Fonseca, a current third-year at the University of Michigan studying Computer Science and Cognitive Science. 
+                    <p>Hey there! I am Pedro Fonseca, a current senior at the University of Michigan studying Computer Science and Cognitive Science. 
 						A tough journey lies ahead as I dive head-first into game development and there is no better way to swim than getting some strides going.
 						Below you will find some of the best works I have in my pocket as of this moment. All of them are made under immense time pressure making
 						sure every second of time meant something to the end result. Take a gander and let me know what you think!</p>
