--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        My team developed "Slime-Handed" through the Unity game engine and C# scripts.
-                        Project management was handled through the Jira Software.
-                        I made the slime model we used in game through Blender.
+                        My team developed "Slime-Handed" through the <b>Unity</b> game engine and <b>C#</b> scripts.
+                        Project management was handled through the <b>Jira</b> Software.
+                        I made the slime model we used in game through <b>Blender</b>.
                         Our artist formed the comic strip art through Adobe After Effects and 
                         the editing of images and sprites for the purpose of trailers, devblogs, and particle effects, 
-                        were done through GIMP.
+                        were done through <b>GIMP</b>.
                         You may find a Windows and Mac build as well as dev blogs for the game below!
                     </p>
                     <a href="https://www.indiedb.com/members/fonsecap/blogs" class="btn btn-outline-primary d-none d-lg-block">Blog</a>
@@ -341,10 +341,10 @@
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        The WolverineSoft team developed Project Nova through the Unity game engine and C# scripts.
-                        Project management was handled through the Jira Software, documentation was recorded in Confluence,
-                        and version control utilized BitBucket which I personally paired with SourceTree.
-                        A build is coming soon as the project is coming to an end soon!
+                        The WolverineSoft team developed Project Nova through the <b>Unity</b> game engine and <b>C#</b> scripts.
+                        Project management was handled through the <b>Jira</b> Software, documentation was recorded in <b>Confluence</b>,
+                        and version control utilized <b>BitBucket</b> which I personally paired with <b>SourceTree</b>.
+                        A build is coming soon as the project is coming to an end!
                     </p>
                 </div>
             </div>
@@ -370,8 +370,8 @@
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        My partner and I created this version of "The Legend of Zelda" through the Unity game engine and C# scripts.
-                        Project management was handled through the Jira Software.
+                        My partner and I created this version of "The Legend of Zelda" through the <b>Unity</b> game engine and <b>C#</b> scripts.
+                        Project management was handled through the <b>Jira</b> Software.
                         A WebGL build was then hosted to itch.io which you may find below!
                     </p>
                     <a href="https://fonsecap.itch.io/legend-of-zelda" class="btn btn-outline-primary d-none d-lg-block">Play</a>
@@ -400,8 +400,8 @@
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        I created "Left Behind" through the Unity game engine and C# scripts.
-                        Project management was handled through the Jira Software.
+                        I created "Left Behind" through the <b>Unity</b> game engine and <b>C#</b> scripts.
+                        Project management was handled through the <b>Jira</b> Software.
                         A WebGL build was then hosted to itch.io which you may find below.
                     </p>
                     <a href="https://fonsecap.itch.io/left-behind" class="btn btn-outline-primary d-none d-lg-block">Play</a>
@@ -428,8 +428,8 @@
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        Our team developed this game entirely through Unity and C# scripts along with face-to-face team communication.
-                        The design of the game employed the team's first use of Coroutines which expanded our options into time-based coding.
+                        Our team developed this game entirely through <b>Unity</b> and <b>C#</b> scripts along with face-to-face team communication.
+                        The design of the game employed the team's first use of <b>Coroutines</b> which expanded our options into time-based coding.
                         A WebGL build was then hosted to itch.io which you may find below!
                     </p>
                     <a href="https://fonsecap.itch.io/ace-of-swords" class="btn btn-outline-primary d-none d-lg-block">Play</a>
@@ -455,7 +455,7 @@
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        Our team developed this game entirely through Unity and C# scripts along with face-to-face team communication.
+                        Our team developed this game entirely through <b>Unity</b> and <b>C#</b> scripts along with face-to-face team communication.
                         You can find a windows download below!
                     </p>
                     <a href="https://fonsecap.itch.io/witching-hour" class="btn btn-outline-primary d-none d-lg-block">Play</a>
