--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 						Below you will find some of the best works I have in my pocket as of this moment. All of them are made under immense time pressure making
 						sure every second of time meant something to the end result. Take a gander and let me know what you think!</p>
                     <div class="row mb-3">
-                        <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Pedro Fonseca</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">6 August 2002</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Pedro Ivan Fonseca Borges</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Prospective Bachelor</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">fonsecap@umich.edu</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
