--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
                     <div class="slideshow-container">
                     <div class="mySlides2">
-                        <img class="slide-img" src="img/nova_title.png" alt="">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UfdB0nQPI6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
 
                     <div class="mySlides2">
