--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                     <div class="slideshow-container">
                     <div class="mySlides">
-                        <img class="slide-img" src="img/slime1.png" alt="">
+                        <iframe width="385" height="216" src="https://www.youtube.com/embed/cQMrZ4qzkBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
 
                     <div class="mySlides">
