--- a/index.html
+++ b/index.html
@@ -228,8 +228,9 @@
                         The WolverineSoft team developed Project Nova through the <b>Unity</b> game engine and <b>C#</b> scripts.
                         Project management was handled through the <b>Jira</b> Software, documentation was recorded in <b>Confluence</b>,
                         and version control utilized <b>BitBucket</b> which I personally paired with <b>SourceTree</b>.
-                        A build is coming soon as the project is coming to an end!
+                        Play now for free on <b>Steam</b>!
                     </p>
+                    <a href="https://store.steampowered.com/app/2557580/Cellosseum/?beta=1" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
             <hr>
