Removed Witching Hour

--- a/index.html
+++ b/index.html
@@ -751,8 +751,8 @@
                     <a href="https://fonsecap.itch.io/ace-of-swords" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
-            <hr>
-            <div class="row align-items-center">
+            <!-- <hr> -->
+            <!-- <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <img class="img-fluid rounded w-100" src="img/treehouse.png" alt="">
                 </div>
@@ -776,7 +776,7 @@
                     </p>
                     <a href="https://fonsecap.itch.io/witching-hour" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Portfolio End -->
