--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
             <div class="d-flex justify-content-center mb-4">
                 <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
-                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/pedro-fonseca-0123b81b3/"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="www.linkedin.com/in/pedro-fonseca-borges-0123b81b3"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="#about"><img class="img-fluid rounded w-50" src="img/gmail.png" alt=""></a>
             </div>
             <!-- <div class="d-flex justify-content-center mb-3">
