Add Resume Directly to Website

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="https://drive.google.com/file/d/1TaBmcLMstTY0EXN7UVtf_VxWG08LhtIe/view?usp=sharing" class="nav-item nav-link">Resume</a>
+                <a href="resume.html" class="nav-item nav-link">Resume</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -88,13 +88,13 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Game Developer & Game Designer</h3>
-                    <p>Hey there! I am Pedro Fonseca, a Bachelor of Science from the University of Michigan.
+                    <p>Hey there! I am Pedro Fonseca a Bachelor of Computer Science and Cognitive Science from the University of Michigan.
 						A tough journey lies ahead as I dive head-first into game development and there is no better way to swim than getting some strides going.
 						Below you will find some of the best works I have in my pocket as of this moment. All of them are made under immense time pressure making
 						sure every second of time meant something to the end result. Take a gander and let me know what you think!</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Pedro Ivan Fonseca Borges</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Prospective Bachelor</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachelor of Science</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">fonsecap@umich.edu</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
