--- a/index.html
+++ b/index.html
@@ -787,6 +787,13 @@
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
             </div>
+                <form action="mailto:fonsecap@umich.edu" method="post" enctype="text/plain">
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" name="subject" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <input type="submit" value="Send Email">
+                </form>
         </div>
     </div>
     <!-- Contact End -->
