Added More Gameplay Footage
-Left Behind
-Ace of Swords

--- a/index.html
+++ b/index.html
@@ -411,7 +411,17 @@
             <hr>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/bird.png" alt="">
+                    <style>
+                        .mySlides4 {
+                        display: none;
+                        }
+                    </style>
+
+                    <div class="slideshow-container">
+                        <div class="mySlides4">
+                            <iframe width="385" height="216" src="https://www.youtube.com/embed/tUSX-YCtLbM?si=9uhCMfFdsl9400Cz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Left Behind</h3>
@@ -499,7 +509,17 @@
             <hr>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/card_back.png" alt="">
+                    <style>
+                        .mySlides5 {
+                        display: none;
+                        }
+                    </style>
+
+                    <div class="slideshow-container">
+                        <div class="mySlides5">
+                            <iframe width="385" height="216" src="https://www.youtube.com/embed/96jKWEqUGp0?si=7qCmsreZ0-ZlqKhr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Ace of Swords</h3>
