--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                     <h4>Contributions</h4>
                     <p>
                         <ul>
-                            <li>Designed and integrated the eye tracking crosshair to alleviate the distractions of a line trace and acurrately track the direction the user is looking at.</li>
-                            <li>Linked audience behaviors to expected behaviors of the user in the case of poor performance to indiciate in a visual way that the user was doing something wrong.</li>
+                            <li>Designed and integrated the eye tracking crosshair to alleviate the distractions of a line trace and accurately track the direction the user is looking at.</li>
+                            <li>Linked audience behaviors to expected behaviors of the user in the case of poor performance to indicate in a visual way that the user was doing something wrong.</li>
                             <li>Implemented the note card system to replicated note usage in real-life speeches.</li>
                             <li>Wrote and assigned Jira tasks for each sprint for a productive iterative cycle.</li>
                         </ul>
