--- a/index.html
+++ b/index.html
@@ -216,6 +216,35 @@
             <hr>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
+                    <div class="slideshow-container">
+                        <iframe width="385" height="216" src="https://youtube.com/shorts/NH-77PE4s1c?si=YSw61hPckGQ7xD_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <h3 class="mb-4">One Tap Victory Lap (OTVL)</h3>
+                    <p>
+                        Tap your way through 300+ levels in this tap, lap, car game.
+                    </p>
+                    <h4>Contributions</h4>
+                    <p>
+                        <ul>
+                            <li>Built and shipped a mobile app to the App and Google Play store with a team of 4 developers.</li>
+                            <li>Implemented a notification system to guide players to previously missed menus using static class structures.</li>
+                            <li>Integrated UI/UX elements into an in-progress project to allow the player to see their reward progress and familiarize myself with the existing codebase.</li>
+                        </ul>
+                    </p>
+                    <h4>Toolkit</h4>
+                    <p>
+                        The AppStop.io team developed OTVL through the <b>Unity</b> game engine and <b>C#</b> scripts.
+                        Project management was handled through the <b>Asana</b> Software, and version control utilized <b>Github</b>.
+                        Play now for free on the <b>App</b> or <b>Google Play</b> Store!
+                    </p>
+                    <a href="https://onetapvictorylap.com/" class="btn btn-outline-primary d-none d-lg-block">Play</a>
+                </div>
+            </div>
+            <hr>
+            <div class="row align-items-center">
+                <div class="col-lg-5 pb-4 pb-lg-0">
                     <style>
                         .mySlides0 {
                         display: none;
