--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <div class="slideshow-container">
-                        <iframe width="385" height="216" src="https://youtube.com/shorts/NH-77PE4s1c?si=YSw61hPckGQ7xD_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <video width="385" height="216" controls> <source src="video/OTVL.mov" type="video/quicktime"> Your browser does not support the video tag. </video>
                     </div>
                 </div>
                 <div class="col-lg-7">
