Revised OTVL video

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <div class="slideshow-container">
-                        <video width="385" height="216" controls> <source src="video/OTVL.mov" type="video/quicktime"> Your browser does not support the video tag. </video>
+                        <iframe width="385" height="216" src="https://youtube.com/embed/NH-77PE4s1c?si=UUe3dvLI6DYAQSiD" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-lg-7">
