Resume Update + Spellcheck

--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
                         <ul>
                             <li>Designed and implemented all UI elements to provided a low-complexity and welcoming art style.</li>
                             <li>Structured a database of tree and enemy objects used to pass data between scenes.</li>
-                            <li>Utlizied Mapbox systems to provide an accurate map of a user's surroundings.</li>
+                            <li>Utilized Mapbox systems to provide an accurate map of a user's surroundings.</li>
                             <li>Diversified enemy types with different movement patterns to make the game aspect more alluring.</li>
-                            <li>Handled user camera controls to allow preferred perspectivs of the environment.</li>
+                            <li>Handled user camera controls to allow preferred perspectives of the environment.</li>
                         </ul>
                     </p>
                     <h4>Toolkit</h4>
