Tilly Track Tap Update
-Updated contributions and video sections for Tilly Track Tap.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pedro's Spotlight</title>
+    <title>Portfolio for Pedro Fonseca</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -116,10 +116,9 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Game Developer & Game Designer</h3>
-                    <p>Hey there! I am Pedro Fonseca a Bachelor of Computer Science and Cognitive Science from the University of Michigan.
-						A tough journey lies ahead as I dive head-first into game development and there is no better way to swim than getting some strides going.
-						Below you will find some of the best works I have in my pocket as of this moment. All of them are made under immense time pressure making
-						sure every second of time meant something to the end result. Take a gander and let me know what you think!</p>
+                    <p>Hey there! I am a Bachelor of Computer Science and Cognitive Science from the University of Michigan who graduated early
+                        last December. I currently work as a mobile developer at Adrenaline Interactive developing a soon-to-be top racing game!
+						Below you will find some of the best works I have completed. Take a gander and let me know if I can push your project to next level!</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Pedro Ivan Fonseca Borges</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachelor of Science</span></h6></div>
@@ -217,29 +216,31 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <div class="slideshow-container">
-                        <iframe width="385" height="216" src="https://youtube.com/embed/NH-77PE4s1c?si=UUe3dvLI6DYAQSiD" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/vpluMX4uDDI?si=__olLpKHesCoLMiA" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">One Tap Victory Lap (OTVL)</h3>
+                    <h3 class="mb-4">Tilly Track Tap (TTT)</h3>
                     <p>
                         Tap your way through 300+ levels in this tap, lap, car game.
                     </p>
                     <h4>Contributions</h4>
                     <p>
                         <ul>
-                            <li>Built and shipped a mobile app to the App and Google Play store with a team of 4 developers.</li>
-                            <li>Implemented a notification system to guide players to previously missed menus using static class structures.</li>
-                            <li>Integrated UI/UX elements into an in-progress project to allow the player to see their reward progress and familiarize myself with the existing codebase.</li>
+                            <li>Led task management over a team of 5 developers as programming lead for a Unity mobile application.</li>
+                            <li>Built and shipped the mobile application to the App and Google Play store.</li>
+                            <li>Implemented scriptable level creation system for level designers.</li>
+                            <li>Added and maintained features such as user level creation, level sharing, game sharing, unlockables, and new level mechanics.</li>
+                            <li>Integrated new UI/UX designs into any given part of the game. </li>
                         </ul>
                     </p>
                     <h4>Toolkit</h4>
                     <p>
-                        The AppStop.io team developed OTVL through the <b>Unity</b> game engine and <b>C#</b> scripts.
+                        The Adrenaline Interactive team developed TTT through the <b>Unity</b> game engine and <b>C#</b> scripts.
                         Project management was handled through the <b>Asana</b> Software, and version control utilized <b>Github</b>.
                         Play now for free on the <b>App</b> or <b>Google Play</b> Store!
                     </p>
-                    <a href="https://onetapvictorylap.com/" class="btn btn-outline-primary d-none d-lg-block">Play</a>
+                    <a href="https://tillytaptrack.com/" class="btn btn-outline-primary d-none d-lg-block">Play</a>
                 </div>
             </div>
             <hr>
