--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Portfolio for Pedro Fonseca</title>
+    <title>Portfolio for Pedro</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -216,7 +216,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <div class="slideshow-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/vpluMX4uDDI?si=__olLpKHesCoLMiA" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="385" height="216" src="https://www.youtube.com/embed/vpluMX4uDDI?si=__olLpKHesCoLMiA" title="YouTube video player" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-lg-7">
